--- a/L80/index.html
+++ b/L80/index.html
@@ -227,6 +227,12 @@
       <hr>
     </div>
     <div>
+      <img src="images/javier.jpg" alt="" />
+      <h3>Javier</h3>
+      <p>Canta, toca la guitarra y tambien el bajo</p>
+      <hr>
+    </div>
+    <div>
       <img src="images/javito.jpg" alt="" />
       <h3>Javito</h3>
       <p>Como toca el joio. Un día toca la bateria y otro se hace un maratón.
